# tinyap

./: AUTHORS  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  Makefile.in  TODO  ape_prettyprint.c  ape_prettyprint2.c  ape_tinycalc.c  ast.c  ast.h  bootstrap.c  bootstrap.h  config.h.cmake.in  config.h.in  configure  configure.in  gen_pc.pl  hashtab.h  header.html  index.html  main++.c++  main.c  math.gram  node_cache.c  node_cache.h  notes.txt  pilot_manager.c  pilot_manager.h  reformatting_output_for_C  serialize.c  stack.c  test.c  test3.math  test4.math  test_pilot.c  tinyap.c  tinyap.h  tinyap.pc.in  (+5 more)
Java/: Demo.java  Interpreter.java  Makefile  Panneau.java  demo.sh  javaconfig.sh  math.CC.gram  parsing_AST.c  parsing_AST.h  parsing_AST_Node.h  parsing_TinyaJP.c  parsing_TinyaJP.h  test.math  tinyajp_Native.c  tinyajp_Native.h
Java/parsing/: AST.java  TinyaJP.java
Java/tinyajp/: AstNode.java  Native.java  Parser.java
ast_api/: ape_prettyprint.c  make.sh  pilot_cache.h  pilot_manager.c  pilot_manager.h  stack.c  stack.h  test.c  test_pilot.c  walkableast.c  walkableast.h  walker.c  walker.h
attic/: CMakeLists.txt  Makefile.am  Makefile.in  ast.h  bootstrap.c  bootstrap.h  hashtab.h  node_cache.h  pda.c  pda.h  serialize.c  string_registry.c  tinyap_alloc.h  token_utils.c  token_utils.h  tokenizer.h  trie.h  walker.h
attic/experiment/: test.c
dev-doc/: Tutorial.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__api__ast.html  group__api__parser.html  index.html  modules.html  pages.html  tinyap_8h.html  tinyap_8h__dep__incl.map  tinyap_8h__dep__incl.md5  tinyap_8h__incl.md5  tinyap_8h_source.html  tinyape_8h.html  tinyape_8h__incl.map  tinyape_8h__incl.md5  tinyape_8h_source.html  tutorial_8h.html  tutorial_8h_source.html
dev-doc/search/: all_6d.html  all_6e.html  all_74.html  all_77.html  defines_5f.html  defines_74.html  defines_77.html  enums_77.html  enumvalues_64.html  enumvalues_65.html  enumvalues_75.html  files_74.html  functions_74.html  functions_77.html  search.js  typedefs_70.html  typedefs_74.html  typedefs_77.html
examples/: Makefile.am  Makefile.in  ape_prettyprint2.c  ape_tinycalc.c  math.gram  math.short  test.math  test2.math
src/: CMakeLists.txt  Doxyfile  Makefile  Makefile.am  Makefile.in  ape_prettyprint.c  ast.c  ast.cc  ast.h  bootstrap.c  bootstrap.h  hashtab.h  list.h  lr.cc  lr.h  lr_base.h  lr_equal_to.h  lr_grammar.h  lr_gss.cc  lr_gss.h  lr_less_than.h  lr_visitors.h  main.c  main.cc  node_cache.c  node_cache.h  parse_context.c  pda.c  pda.h  pda_impl.c  pda_impl.h  pilot_manager.c  pilot_manager.h  regex.cc  regex.h  registry.h  serialize.c  serialize.h  stack.c  stack.h  (+25 more)
src/lr/: .depend  Doxyfile  Makefile  ape_prettyprint.c  ast.c  ast.cc  ast.h  bootstrap.c  config.h  list.h  loop_test.sh  lr.cc  lr.h  lr_base.h  lr_equal_to.h  lr_grammar.h  lr_gss.h  lr_less_than.h  lr_visitors.h  main.c  main.cc  parse_context.c  parse_context.h  serialize.c  serialize.h  stack.c  string_registry.c  string_registry.cc  string_registry.h  test.cc  test.gram  tinyap.c  tinyap.cc  tinyap.h  tinyap_alloc.c  tinyap_alloc.h  tinyape.h  token_utils.c  token_utils.h  trie.c  (+6 more)
src/lr/nl/: n.wl
src/nl/: det.wl  nl.gram  prep.wl  test.txt  v.wl
