#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([tinyap], [1.0], [damien.leroux@gmail.com])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE



# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_PROG_MAKE_SET
AC_PROG_INSTALL

# Checks for libraries.
AC_CHECK_LIB([dl], [dlsym])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_C_VOLATILE

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([atexit memset regcomp strchr strdup])

#AC_CONFIG_FILES([Java/Makefile
#                 Makefile])

AC_OUTPUT(Makefile src/Makefile examples/Makefile)
